--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div class="container"
-        <img src"
+        <div class="container">
         <h1>Row Counter</h1>
         <h2 id="counter-el">0</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
